--- a/app/views/plannings/_edit.html.haml
+++ b/app/views/plannings/_edit.html.haml
@@ -144,7 +144,7 @@
                     %li
                       = link_to planning_modal_path(@planning, modal: 'sms_drivers'), remote: true, format: 'js', 'data-toggle': "modal", 'data-target': "#planning-send-sms-drivers-modal", 'data-keyboard': "true", id: 'send-sms-drivers' do
                         %i.fa.fa-fw.fa-comment-sms
-                        = t('plannings.edit.deliver_sends.send_sms')
+                        = t('plannings.edit.deliver_send.plural.send_sms')
                   - if @planning.routes.any?{ |route| route.vehicle_usage_id && !route.vehicle_usage.vehicle.devices.key?(definition[:device]) }
                     - definition[:route_operations].each do |route_operation|
                       - options = { planning_id: "#{@planning.id}" }
@@ -152,7 +152,7 @@
                       - options.merge!({ service: "#{definition[:device]}", operation: "#{route_operation.is_a?(Hash) ? route_operation.keys[0] : route_operation}" })
                       %li.link.device-operation{data: options}
                         %i.fa.fa-fw{ class: (route_operation == :clear ? 'fa-rectangle-xmark' : 'fa-mobile fa-rotate-90') }
-                          - translation = "#{definition[:device]}_#{route_operation.is_a?(Hash) ? route_operation.keys[0].to_s + '_' + route_operation.values[0].to_s.pluralize : route_operation.to_s.pluralize}.action"
+                          - translation = "#{definition[:device]}_#{route_operation.is_a?(Hash) ? route_operation.keys[0].to_s + '_' + route_operation.values[0].to_s : route_operation.to_s}.plural.action"
                         = t("plannings.edit.#{translation}")
                     - if definition[:route_operations].any?
                       %li.divider{role: "separator"}
