Help icon book-open instead of hand-holding-hand

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -232,7 +232,7 @@
                   %li#menu-help.help.menu-section.menu-list-item
                     = link_to @reseller.help_url.gsub('{LG}', I18n.locale.to_s), target: '_blank' do
                       .d-flex.align-items-center.justify-content-center.col-md-12.btn.btn-default
-                        %i.fa.fa-hand-holding-hand.fa-fw
+                        %i.fa.fa-book-open.fa-fw
                         .hidden-menu.menu_label
                           = t 'web.help'
                 %li.dropdown.menu-list-item
