Reduce index logo

--- a/app/views/index/_subscription_on.html.haml
+++ b/app/views/index/_subscription_on.html.haml
@@ -4,7 +4,7 @@
   .row
     .col-md-offset-2.col-md-8.header
       .company-logo.text-center
-        = image_tag @reseller.logo_large.url || "logo.svg", width: 250, alt: @reseller.name
+        = image_tag @reseller.logo_large.url || "logo.svg", height: 150, alt: @reseller.name
   .row
     .col-md-offset-1.col-md-10
       %h2
