change params name

--- a/app/views/plannings/index.html.erb
+++ b/app/views/plannings/index.html.erb
@@ -108,7 +108,7 @@
 
 <%
 controller.js(
-  columns_preferences: current_user.exportable_columns,
+  export_settings: current_user.export_settings,
   user_api_key: current_user.api_key,
   customer_id: @customer.id,
   spreadsheet_columns: @spreadsheet_columns,
